# Smetana

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md  redesign.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 01_ARCHITECTURE_OVERVIEW.md  02_MODULE_MAP.md  03_KEY_TYPES.md  04_PUBLIC_API_SURFACE.md  05_DEPENDENCY_GRAPH.md  06_STATE_MANAGEMENT.md  07_BUILD_AND_TEST.md  CODEBASE_INDEX.md  first_plan_semidone.md  second_plan_done.md  technical_specification.md  todo.md
docs/redesign/: 01_CONCEPT.md  02_TECHNICAL.md  03_IMPLEMENTATION_PLAN.md
redesign/: 01-extract-methods.md  02-earcutr-triangulation.md  03-chrono-dates.md  04-deduplicate-colors.md  05-glam-math.md  06-remove-fallback-position.md  07-snapshot-undo.md  08-mutation-functions.md
src/: app.rs  history.rs  main.rs  model.rs  persistence.rs
src/app/: canvas.rs  canvas_draw.rs  draw.rs  history.rs  mod.rs  panels.rs  price_list.rs  project_list.rs  properties_panel.rs  property_edits.rs  service_picker.rs  services_panel.rs  toolbar.rs  viewport.rs
src/editor/: canvas.rs  endpoint_merge.rs  mod.rs  opening_tool.rs  room_detection.rs  room_metrics.rs  snap.rs  triangulation.rs  wall_joints.rs  wall_joints_miter.rs  wall_tool.rs
src/export/: excel.rs  excel_sheets.rs  mod.rs
src/model/: edge.rs  geometry.rs  label.rs  mod.rs  opening.rs  point.rs  price.rs  project.rs  quantity.rs  room.rs  room_metrics.rs  wall.rs
src/panels/: mod.rs
src/persistence/: mod.rs  price_io.rs  project_io.rs
