[package]
name = "smetana"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
earcutr = "0.5"
glam = { version = "0.29", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"
